# NIQ_assessment

./: .gitignore  README.md  pyproject.toml
src/NIQ_GFK.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/processor/: calculation.py
src/util/: utils.py
tests/: test_read_data.py
tests/mock/data/: test_data.csv
